# identity-cbindings

./: .env  .gitignore  Cargo.toml  README.md  example.stronghold  main
bindings-demo/: Makefile  identity.h  main.c
header-binding/: .cproject  .project  identity.h  main  main.c
src/: build.rs  identity_wrapper.rs  lib.rs  main.rs  wrapper.rs
