[package]
name = "identity_openssl"
version = "0.1.0"
edition = "2021"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iota-sdk = { version = "1.0", default-features = false, features = ["tls", "client", "stronghold"] }
identity_iota = { version = "1.0.0", default-features = false, features = ["memstore", "domain-linkage", "iota-client"] }
identity_stronghold = { version = "1.0.0" }
identity_eddsa_verifier = { version = "1.0.0" }
rand = "0.8.5"
anyhow = "1.0.62"
tokio = { version = "1.29", default-features = false, features = ["rt"] }
env_logger = "0.10.0"
dotenv = "0.15.0"

[build-dependencies]
cbindgen = "0.18.0"

[lib]
crate-type = ["cdylib"]
name = "identity_openssl"
path = "src/lib.rs"


[[example]]
name = "main"
path = "examples/main.rs"