[package]
name = "identity_openssl"
version = "0.1.0"
edition = "2021"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iota-sdk = { version = "1.0", default-features = false, features = ["tls", "client", "stronghold"] }
identity_iota = { version = "1.0.0", default-features = false, features = ["memstore", "domain-linkage", "iota-client"] }
identity_stronghold = { version = "1.0.0" }
identity_eddsa_verifier = { version = "1.0.0" }
rand = "0.8.5"
anyhow = "1.0.62"
tokio = { version = "1.29", default-features = false, features = ["rt"] }
env_logger = "0.10.0"
dotenv = "0.15.0"

[patch.crates-io]
identity_stronghold = { path = "../identity.rs-1/identity_stronghold" }
identity_core = { path = "../identity.rs-1/identity_core" }
identity_jose = { path = "../identity.rs-1/identity_jose" }
identity_did = { path = "../identity.rs-1/identity_did" }
identity_verification = { path = "../identity.rs-1/identity_verification" }
identity_document = { path = "../identity.rs-1/identity_document" }
identity_credential = { path = "../identity.rs-1/identity_credential" }
identity_storage = { path = "../identity.rs-1/identity_storage" }
identity_eddsa_verifier = { path = "../identity.rs-1/identity_eddsa_verifier" }
identity_iota = { path = "../identity.rs-1/identity_iota" }
identity_iota_core = { path = "../identity.rs-1/identity_iota_core" }
# identity_resolver = { path = "../identity.rs-1/identity_resolver" }

[build-dependencies]
cbindgen = "0.18.0"

[lib]
crate-type = ["cdylib"]
name = "identity_openssl"
path = "src/lib.rs"


[[example]]
name = "main"
path = "examples/main.rs"
